--- a/src/compiler/compiler.vcxproj
+++ b/src/compiler/compiler.vcxproj
@@ -12,6 +12,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="compiler.cpp" />
+    <ClCompile Include="parser.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="parser.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{5D8F64E9-530D-4D8C-BB35-B1081CAF237B}</ProjectGuid>
