--- a/src/codec/codec.vcxproj.filters
+++ b/src/codec/codec.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="encoder_decimal.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="bcd.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="encoder_byte_vector.cpp">
@@ -51,6 +54,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="encoder_decimal.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="bcd.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
