--- a/src/compiler/compiler.vcxproj.filters
+++ b/src/compiler/compiler.vcxproj.filters
@@ -13,6 +13,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Etc">
+      <UniqueIdentifier>{8524f003-bf68-4fcb-a8a1-0835bdb08376}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="compiler.cpp">
@@ -26,5 +29,10 @@
     <ClInclude Include="parser.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Xml Include="..\..\etc\templates.xml">
+      <Filter>Etc</Filter>
+    </Xml>
   </ItemGroup>
 </Project>
