--- a/src/compiler/compiler.vcxproj
+++ b/src/compiler/compiler.vcxproj
@@ -15,6 +15,7 @@
     <ClCompile Include="parser.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="config.h" />
     <ClInclude Include="parser.h" />
   </ItemGroup>
   <ItemGroup>
