--- a/src/codec/codec.vcxproj
+++ b/src/codec/codec.vcxproj
@@ -14,20 +14,22 @@
     <ClInclude Include="bcd.h" />
     <ClInclude Include="decimal.h" />
     <ClInclude Include="encoder.h" />
-    <ClInclude Include="encoder_ascii.h" />
     <ClInclude Include="encoder_byte_vector.h" />
     <ClInclude Include="encoder_decimal.h" />
     <ClInclude Include="encoder_int.h" />
+    <ClInclude Include="encoder_string_ascii.h" />
+    <ClInclude Include="encoder_string_utf8.h" />
     <ClInclude Include="fast_codec.h" />
     <ClInclude Include="nullable_types.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="bcd.cpp" />
     <ClCompile Include="encoder.cpp" />
-    <ClCompile Include="encoder_ascii.cpp" />
     <ClCompile Include="encoder_byte_vector.cpp" />
     <ClCompile Include="encoder_decimal.cpp" />
     <ClCompile Include="encoder_int.cpp" />
+    <ClCompile Include="encoder_string_ascii.cpp" />
+    <ClCompile Include="encoder_string_utf8.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{1EECB6AC-4A3C-460E-B098-0EB085739953}</ProjectGuid>
