Decoder for integers
Decoder for integers

--- a/src/codec/codec.vcxproj
+++ b/src/codec/codec.vcxproj
@@ -12,7 +12,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bcd.h" />
+    <ClInclude Include="common_defs.h" />
     <ClInclude Include="decimal.h" />
+    <ClInclude Include="decoder.h" />
     <ClInclude Include="decoder_int.h" />
     <ClInclude Include="encoder.h" />
     <ClInclude Include="encoder_byte_vector.h" />
@@ -25,6 +27,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="bcd.cpp" />
+    <ClCompile Include="decoder.cpp" />
     <ClCompile Include="decoder_int.cpp" />
     <ClCompile Include="encoder.cpp" />
     <ClCompile Include="encoder_byte_vector.cpp" />
