--- a/src/codec/codec.vcxproj.filters
+++ b/src/codec/codec.vcxproj.filters
@@ -48,6 +48,12 @@
     <ClInclude Include="decoder_int.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="decoder.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="common_defs.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="encoder_byte_vector.cpp">
@@ -72,6 +78,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="decoder_int.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="decoder.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
