--- a/test/test.vcxproj.filters
+++ b/test/test.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="test_encoder_msg.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="test_decoder_int.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="time_counter.h">
