--- a/src/codec/codec.vcxproj
+++ b/src/codec/codec.vcxproj
@@ -18,6 +18,8 @@
     <ClInclude Include="decoder_byte_vector.h" />
     <ClInclude Include="decoder_decimal.h" />
     <ClInclude Include="decoder_int.h" />
+    <ClInclude Include="decoder_string_ascii.h" />
+    <ClInclude Include="decoder_string_utf8.h" />
     <ClInclude Include="encoder.h" />
     <ClInclude Include="encoder_byte_vector.h" />
     <ClInclude Include="encoder_decimal.h" />
@@ -33,6 +35,8 @@
     <ClCompile Include="decoder_byte_vector.cpp" />
     <ClCompile Include="decoder_decimal.cpp" />
     <ClCompile Include="decoder_int.cpp" />
+    <ClCompile Include="decoder_string_ascii.cpp" />
+    <ClCompile Include="decoder_string_utf8.cpp" />
     <ClCompile Include="encoder.cpp" />
     <ClCompile Include="encoder_byte_vector.cpp" />
     <ClCompile Include="encoder_decimal.cpp" />
